# trusted-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  trusted-cpp.h  trusted-cpp.sh
docs/: CNAME  README.md  _config.yml  concept.md  examples.md  index.md  installation.md
docs/_layouts/: default.html
docs/assets/css/: style.css
docs/ru/: concept.md  examples.md  index.md  installation.md
plugin/: CMakeLists.txt  trusted-cpp_clang.cpp  trusted-cpp_plugin.h
test/: CMakeLists.txt  _cycles.cpp  _example.cpp  invalidate.cpp  lifetime.cpp  lit.site.cfg.py  nominal_types.cpp  thread_safety.cpp  trusted-cpp_unittest.cpp  using_external.cpp
